--- a/battleship.html
+++ b/battleship.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="board">
+    <!-- <div id="board">
         <div id="message"> <h1 id="message"></h1></div>
         <table>
             <tr>
@@ -78,12 +80,92 @@
         </table>
         <form action="">
             <input autofocus type="text" placeholder="A0" min="1" max="2" value="" id="guessInput" oninput="checkHit(this.value)">
-            <!-- <input type="button" value="Fire!" onchange="checkHit()"> -->
         </form>
+    </div> -->
+    <div style="color: aliceblue;" class="container text-center bg-black min-vw-100 min-vh-100">
+        <div class="row">
+            <div class="col-2 min-vh-100">
+                <div  id="message" class="d-flex justify-content-center"></div>
+            </div>
+            <div id="board" class="col-8 min-vh-100" >
+                <table>
+                    <tr>
+                        <td id="00"></td>
+                        <td id="01"></td>
+                        <td id="02"></td>
+                        <td id="03"></td>
+                        <td id="04"></td>
+                        <td id="05"></td>
+                        <td id="06"></td>
+                    </tr>
+                    <tr>
+                        <td id="10"></td>
+                        <td id="11"></td>
+                        <td id="12"></td>
+                        <td id="13"></td>
+                        <td id="14"></td>
+                        <td id="15"></td>
+                        <td id="16"></td>
+                    </tr>
+                    <tr>
+                        <td id="20"></td>
+                        <td id="21"></td>
+                        <td id="22"></td>
+                        <td id="23"></td>
+                        <td id="24"></td>
+                        <td id="25"></td>
+                        <td id="26"></td>
+                    </tr>
+                    <tr>
+                        <td id="30"></td>
+                        <td id="31"></td>
+                        <td id="32"></td>
+                        <td id="33"></td>
+                        <td id="34"></td>
+                        <td id="35"></td>
+                        <td id="36"></td>
+                    </tr>
+                    <tr>
+                        <td id="40"></td>
+                        <td id="41"></td>
+                        <td id="42"></td>
+                        <td id="43"></td>
+                        <td id="44"></td>
+                        <td id="45"></td>
+                        <td id="46"></td>
+                    </tr>
+                    <tr>
+                        <td id="50"></td>
+                        <td id="51"></td>
+                        <td id="52"></td>
+                        <td id="53"></td>
+                        <td id="54"></td>
+                        <td id="55"></td>
+                        <td id="56"></td>
+                    </tr>
+                    <tr>
+                        <td id="60"></td>
+                        <td id="61"></td>
+                        <td id="62"></td>
+                        <td id="63"></td>
+                        <td id="64"></td>
+                        <td id="65"></td>
+                        <td id="66"></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-2 min-vh-100">
+                <form>
+                    <input autofocus type="text" placeholder="A0" min="1" max="2" value="" id="guessInput"
+                        oninput="checkHit(this.value)" 
+                        class="w-25"
+                    >
+                </form>
+            </div>
+        </div>
     </div>
-    <!-- Load your JavaScript file -->
     <script src="battleship.js"></script>
-    <script >
+    <script>
     </script>
 </body>
 
