--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Battleship</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="battleship/style.css">
 </head>
 
 <body>
@@ -93,7 +93,7 @@
             </div>
         </div>
     </div>
-    <script src="battleship.js"></script>
+    <script src="battleship/battleship.js"></script>
     <script>
     </script>
 </body>
